static/core/css/base.css
/* ... */
@media screen and (min-width: 412px) and (max-width: 768px) {
    .cases-home .projects .container>h1 {
        width: 100%;
        font-size: 24px;
        margin: 30px auto;
    }

    .cases-home .row.project-header {
        margin-top: 20px;
    }

    .cases-home .project-header .col h1 {
        font-size: 24px;
    }

    .cases-home .project-header .col img {
        margin-bottom: 20px;
        margin-top: 20px;
        width: 100%;
    }

    .cases-home .project-detail .row .col img {
        width: 100%;
    }

    .margin-top-150 {
        margin-top: 20px;
    }

    .margin-bottom-150 {
        margin-bottom: 20px;
    }

    .our-clients h1,
    .work-with-us h1 {
        font-size: 24px;
    }

    .our-clients .card-clients-name {
        font-size: 16px;
    }

    .our-clients .card-clients-position {
        font-size: 12px;
    }

    .cases-home .container>h1 {
        font-size: 24px;
        margin: 20px auto;
        width: 90%;
    }

    .work-with-us .working-us-text {
        margin-top: 10px;
    }

    .subtext-size-2 {
        font-size: 16px;
    }

    h1.text-size-1 {
        font-size: 48px;
        margin-bottom: 15px;
    }

    .card-table {
        margin: 10px;
    }

    h1.text-size-1 {
        font-size: 42px;
        margin-bottom: 16px;
        text-align: center;
    }

    h2.text-size-2 {
        font-size: 32px;
        margin-bottom: 14px;
    }

    .margin-top-200 {
        margin-top: 50px;
    }

    .margin-top-150 {
        margin-top: 40px;
    }

    .margin-bottom-150 {
        margin-bottom: 40px;
    }

    .margin-top-90 {
        margin-top: 40px;
    }

    .margin-top-80 {
        margin-top: 36px;
    }

    .margin-top-70 {
        margin-top: 36px;
    }

    .margin-top-60 {
        margin-top: 32px;
    }

    .margin-top-50 {
        margin-top: 30px;
    }

    .margin-top-40 {
        margin-top: 24px;
    }

    .margin-top-30 {
        margin-top: 20px;
    }

    .card-table {
        margin: 10px;
    }

    .second-section,
    .third-section,
    .fourth-section {
        margin-top: 30px;
    }
}

@media (min-width: 768px) {
    .card-header.card-expertise-header {
        padding-left: 65px;
    }

    .card-small {
        min-height: 260px;
    }

    .card-reference {
        min-height: 320px;
    }

    .team-card .monad-image {
        height: 100%;
        width: 100%;
    }

    .card-long.card-team {
        min-height: 600px;
        min-width: 255px;
    }

    .col-12.button-container {
        text-align: center;
    }

    .card.card-expertise {
        border-radius: 0;
        min-height: 350px;
    }

    .project.card {
        /*min-height: 790px;*/
        overflow: hidden;
    }

    .octopus-img {
        max-height: 681px;
        max-width: 559px;
    }

    .card-project-img{
        height: 250px;
        width: 360px;
    }

    .blog-card .blog-img {
        height: 240px;
    }
}

@media (min-width: 992px) {
    .card-open-source {
        min-height: 630px;
    }

    .blog-card .blog-img {
        height: 360px;
    }

    .scroll-down-container div.scroll-down {
        display: inherit;
    }
}

@media (max-width: 768px) {
    .card-header.card-expertise-header {
        padding-left: 10px;
    }

    .card-open-source {}

    h4 > a {
        font-size: 1rem;
    }

    .octopus-img {
        width: 100%;
    }
}

.green-syncro {
    color: #41a428;
}

.syncro-img {
    max-width: 100%;
    max-height: 100%;
}

a.card-link > h2 {
    color: black;
}

ul.open-positions {
    padding: 0;
}

ul.open-positions > li {
    color: #818182;
    list-style: none;
}

.card-open-source .card-img-top{
    align-items: center;
    display: flex;
    height: 46px;
    justify-content: center;
    margin-top: 1em;
}

.card-open-source .row.footer-buttons {
    align-content: center;
    height: 3em;
}

.card-open-source .row.footer-text {
    align-content: center;
    height: 6em;
}

.blog-card .blog-img {
    background-position: center;
    background-size: cover;
    border-radius: 10px;
}

